--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                     <li>Soccer</li>
                     <li>Eating</li>
                     <li>Hanging with friends</li>
+                    <li>Reading</li>
                   </ul>
 
              </div>
