--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 
          <main>
             <!-- Sidebar section -->
-            <div class=.sidebar>
-                <img class=.sidebar-img src="https://mail.google.com/mail/u/0?ui=2&ik=e0ded21807&attid=0.1&permmsgid=msg-f:1686160754099500767&th=17667245ae4e36df&view=fimg&sz=s0-l75-ft&attbid=ANGjdJ-QU8pA1p-AqLnFXQ5U3y-n8ib6xpscDHIRwo8CFTu6Nxs5iEfflE4A4Ak4BtrKQJfi1oDiqyWIxR8zlHEptKzoflb9wvQUTSaQAcgWr4Q3M1WHdEz5CCrrSFo&disp=emb&realattid=e99eec73e47a5bc8_0.1.1" width="400" height="320">
+            <div class="sidebar">
+                <img class="sidebar-img" src="IMG-3252.JPG">
             </div>
 
             <!-- Content section -->
