--- a/projects/runtime/index.html
+++ b/projects/runtime/index.html
@@ -47,7 +47,7 @@
     </head>
     <body>
         <div id="main">
-            <canvas id="canvas" width="500" height="500" style = "background: url('img/verupt.jpeg')"></canvas>
+            <canvas id="canvas" width="500" height="500" style = "background: url('img/volcano.jpg')"></canvas>
         </div>
         <script id="index">
             (function(){
